--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+body {
+    background-color: rgb(236, 247, 233);
+}
+
 table {
     width: 70%;
     border-collapse: collapse;
     margin: 10px auto 30px;
     text-align: center;
+    border: 2px solid #000;
 }
 
 td,
@@ -23,4 +28,45 @@ th {
 
 tr:nth-child(odd) {
     background-color: #e2f6a5;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000;
+    opacity: .8;
+}
+
+.modal-content {
+    justify-content: space-around;
+    background-color: #A7C942;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid rgb(255, 255, 255);
+    width: 80%;
+}
+
+.close {
+    color: #000;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#relult {
+    background-color: #fff;
+    border: 1px solid black;
+}
+
+#modalBtn {
+    margin: 0;
+    position: absolute;
+    left: 50%;
 }
