--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,9 @@ tr:nth-child(odd) {
     position: absolute;
     left: 50%;
 }
+
+#link {
+    position: absolute;
+    left: 50%;
+    padding-top: 30px;
+}
